[gd_scene load_steps=12 format=3 uid="uid://2dr7kitpuk60"]

[ext_resource type="Script" path="res://hero.gd" id="1_jvyhp"]
[ext_resource type="Texture2D" uid="uid://d3n4cbqlrp3j4" path="res://Dungeon_Character_2.png" id="2_7tcar"]
[ext_resource type="AudioStream" uid="uid://dl6hmclovsnvm" path="res://bit.wav" id="4_160sa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppu46"]
size = Vector2(16, 15)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ra6ua"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h53gi"]
atlas = ExtResource("2_7tcar")
region = Rect2(64, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_be0ki"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h53gi")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_k15lg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("end_text:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.996078, 1, 0.984314, 0)]
}

[sub_resource type="Animation" id="Animation_rrq3t"]
resource_name = "end"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("end_text:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.996078, 1, 0.984314, 0), Color(0.996078, 1, 0.984314, 0.588235)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4o35y"]
_data = {
"RESET": SubResource("Animation_k15lg"),
"end": SubResource("Animation_rrq3t")
}

[sub_resource type="LabelSettings" id="LabelSettings_7ky0t"]
line_spacing = 2.0
font_size = 7

[node name="Hero" type="Area2D"]
z_index = 10
position = Vector2(0, 1)
collision_mask = 254
script = ExtResource("1_jvyhp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ppu46")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_ra6ua")
sprite_frames = SubResource("SpriteFrames_be0ki")
animation = &"new_animation"

[node name="sfx_jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_160sa")
volume_db = -17.008
pitch_scale = 1.1

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(2.08165e-12, 20)
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4o35y")
}

[node name="end_text" type="Label" parent="."]
modulate = Color(0.996078, 1, 0.984314, 0)
offset_left = -72.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 48.0
text = "
you did it!
thank you for playing :D"
label_settings = SubResource("LabelSettings_7ky0t")
horizontal_alignment = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
